fixed overflow on map

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -10,9 +10,9 @@
 }
 
 .card-product img {
-  // height: 100%;
+  height: 100%;
   // keep images fixed at width of 120px and remove height:100% so all images align
-  width: 120px;
+  width: 35%;
   // change to contain looks better than cover
   object-fit: cover;
   // changed to cover to fill the height of the picture
